php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #70944 try{ } finally{} can create infinite chains of exceptions
Submitted: 2015-11-20 08:21 UTC Modified: -
From: laruence@php.net Assigned:
Status: Closed Package: *General Issues
PHP Version: 5.6.15 OS:
Private report: No CVE-ID: None
 [2015-11-20 08:21 UTC] laruence@php.net
Description:
------------
try{ } finally{} can create infinite chains of exceptions

Test script:
---------------
<?php
$e = new Exception("Bar");
try {
      throw new Exception("Foo", 0, $e);
} finally {
      throw $e;
}

Expected result:
----------------
exit normally 

Actual result:
--------------
script hangs

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2015-11-20 08:38 UTC] laruence@php.net
Automatic comment on behalf of laruence@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=a1c887964e34c0531b238e33a6b85e9925731194
Log: Fixed bug #70944 (try{ } finally{} can create infinite chains of exceptions)
 [2015-11-20 08:38 UTC] laruence@php.net
-Status: Open +Status: Closed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 24 13:00:01 2026 UTC