Fixed bug #70944 (try{ } finally{} can create infinite chains of exceptions)